--- a/ngxs-angular-store-example/package.json
+++ b/ngxs-angular-store-example/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ngxs/store": "^3.7.1",
     "bulma": "^0.9.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
